--- a/On The Map/View/Base.lproj/Main.storyboard
+++ b/On The Map/View/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                     <navigationItem key="navigationItem" title="On The Map" id="KtA-4K-49w">
                         <barButtonItem key="leftBarButtonItem" id="L6l-Bm-o8q">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="WKf-SK-VQ1">
-                                <rect key="frame" x="16" y="7" width="92" height="30"/>
+                                <rect key="frame" x="16" y="10" width="92" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Logout"/>
                                 <connections>
@@ -88,7 +88,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-u" translatesAutoresizingMaskIntoConstraints="NO" id="7Lh-Ta-pDf">
-                                        <rect key="frame" x="98" y="0.0" width="124" height="171"/>
+                                        <rect key="frame" x="129" y="0.0" width="62" height="171"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="6rr-fv-Jyh">
                                         <rect key="frame" x="57" y="149.5" width="206" height="170.5"/>
@@ -171,13 +171,54 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="listViewTableCell" id="9Oa-3Z-7XI">
-                                <rect key="frame" x="0.0" y="28" width="320" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="locationCell" rowHeight="78" id="9Oa-3Z-7XI" customClass="ListCell" customModule="On_The_Map" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="320" height="78"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9Oa-3Z-7XI" id="gV3-vD-0QX">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="gNs-xv-hj9">
+                                            <rect key="frame" x="66" y="0.0" width="254" height="78"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9UI-fP-8oJ" userLabel="Name">
+                                                    <rect key="frame" x="0.0" y="0.0" width="254" height="39"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mLJ-We-dLX" userLabel="URL">
+                                                    <rect key="frame" x="0.0" y="39" width="254" height="39"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_world" translatesAutoresizingMaskIntoConstraints="NO" id="iVT-Wu-I3h">
+                                            <rect key="frame" x="8" y="8" width="50" height="62"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="3lb-JR-BX3"/>
+                                                <constraint firstAttribute="width" secondItem="iVT-Wu-I3h" secondAttribute="height" multiplier="1:1" id="EiJ-ga-IwE"/>
+                                                <constraint firstAttribute="height" constant="50" id="Glv-n3-4FJ"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="gNs-xv-hj9" secondAttribute="trailing" id="Dvg-Qi-H72"/>
+                                        <constraint firstItem="iVT-Wu-I3h" firstAttribute="top" secondItem="gNs-xv-hj9" secondAttribute="top" constant="8" id="LAn-Nu-lM8"/>
+                                        <constraint firstItem="gNs-xv-hj9" firstAttribute="top" secondItem="gV3-vD-0QX" secondAttribute="top" id="UIq-BM-oiB"/>
+                                        <constraint firstAttribute="bottom" secondItem="gNs-xv-hj9" secondAttribute="bottom" id="g2H-l6-fTx"/>
+                                        <constraint firstItem="gNs-xv-hj9" firstAttribute="bottom" secondItem="iVT-Wu-I3h" secondAttribute="bottom" constant="8" id="ngD-ru-x5n"/>
+                                        <constraint firstItem="iVT-Wu-I3h" firstAttribute="leading" secondItem="gV3-vD-0QX" secondAttribute="leading" multiplier="8" constant="8" id="vQL-nx-2Fn"/>
+                                        <constraint firstItem="gNs-xv-hj9" firstAttribute="leading" secondItem="iVT-Wu-I3h" secondAttribute="trailing" constant="8" id="yYg-JO-2nS"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imageView" destination="iVT-Wu-I3h" id="Fqf-SK-Z7v"/>
+                                    <outlet property="nameLabel" destination="9UI-fP-8oJ" id="co4-e6-Yc9"/>
+                                    <outlet property="urlLabel" destination="mLJ-We-dLX" id="g6F-2s-lro"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -189,7 +230,7 @@
                     <navigationItem key="navigationItem" title="On The Map" id="Dph-pA-exU">
                         <barButtonItem key="leftBarButtonItem" id="k8q-ec-uJ5">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="g1f-P1-CYf">
-                                <rect key="frame" x="16" y="10" width="92" height="30"/>
+                                <rect key="frame" x="16" y="7" width="92" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Logout"/>
                             </button>
@@ -211,7 +252,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tuT-7J-TOP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3308" y="416"/>
+            <point key="canvasLocation" x="3307.5" y="415"/>
         </scene>
         <!--Add Location View Controller-->
         <scene sceneID="KrB-FU-3UU">
@@ -236,7 +277,7 @@
                                 <rect key="frame" x="0.0" y="56" width="320" height="266.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_world" translatesAutoresizingMaskIntoConstraints="NO" id="Gud-mz-oJl">
-                                        <rect key="frame" x="108" y="0.0" width="104" height="133.5"/>
+                                        <rect key="frame" x="134" y="0.0" width="52" height="133.5"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5Yw-iE-oIi">
                                         <rect key="frame" x="60" y="133.5" width="200" height="133"/>
@@ -296,7 +337,7 @@
                 <navigationController id="qcp-sJ-CSX" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" id="vOp-gb-Ton"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="q8L-2D-Ao9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
